Extend git config in work repos

--- a/env/.config/git/config
+++ b/env/.config/git/config
@@ -3,3 +3,7 @@
 	name = Juan Bernardo Benavides Rubio
 [pull]
 	rebase = true
+
+[includeIf "gitdir:~/Repos/loka/"]
+	path = ~/Repos/loka/.gitconfig
+
