Update tmux config

--- a/env/.config/tmux/tmux.conf
+++ b/env/.config/tmux/tmux.conf
@@ -1,25 +1,76 @@
-set -g default-terminal "tmux-256color"
-set -s escape-time 0
+set-option -sa terminal-overrides ",xterm*:Tc"
+set -g mouse on
 
-# Set the binding key to C-a instead of C-b
+# change prefix
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-# Set the base index for windows to 1 instead of 0 (Easier to type)
+# Start windows and panes at 1, not 0
 set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
 
-# vi key movement for copy/pasta mode
+# set vi-mode
 set-window-option -g mode-keys vi
-bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
-# vim-like pane switching
-bind -r ^ last-window
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
+# Vim keybindings for copy mode
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
-# Key binding for reloading configurations
+# Shift Alt vim keys to switch windows
+bind -n M-H previous-window
+bind -n M-L next-window
+
+# Split panes using | and -
+unbind '"'
+unbind %
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+
+# Rename current window
+unbind ,
+bind R command-prompt -I'#W' { rename-window -- '%%' }
+
+# Break current pane to new window
+unbind !
+bind B break-pane
+
+# Kill current window
+unbind &
+bind K kill-window
+
+# Reload the configuration file
 bind r source-file $HOME/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded"
+
+# Theme config
+
+# load before configuring catppuccin
+run '~/.config/tmux/plugins/tmux/catppuccin.tmux'
+
+set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_window_text " #W"
+set -g @catppuccin_window_current_text " #W"
+
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -agF status-right "#{E:@catppuccin_status_battery}"
+set -agF status-right "#{E:@catppuccin_status_date_time}"
+
+
+# Keep this at the bottom!
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'catppuccin/tmux#v2.1.3'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+run '~/.config/tmux/plugins/tpm/tpm'
