💄 Vim, Tmux and Ghostty follow the light/dark settings in Mac

--- a/env/.config/tmux/tmux.conf
+++ b/env/.config/tmux/tmux.conf
@@ -50,7 +50,7 @@ bind r source-file $HOME/.config/tmux/tmux.conf \; display-message "tmux.conf re
 # load before configuring catppuccin
 run '~/.config/tmux/plugins/tmux/catppuccin.tmux'
 
-set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_flavor "latte"
 set -g @catppuccin_window_status_style "rounded"
 set -g @catppuccin_window_text " #W"
 set -g @catppuccin_window_current_text " #W"
@@ -64,6 +64,10 @@ set -agF status-right "#{E:@catppuccin_status_battery}"
 set -agF status-right "#{E:@catppuccin_status_date_time}"
 set -agF status-right "#{E:@catppuccin_status_host}"
 
+# Update theme based on system theme
+set -g @dark-notify-theme-path-light "$HOME/.config/tmux/catppuccin-latte.conf"
+set -g @dark-notify-theme-path-dark "$HOME/.config/tmux/catppuccin-mocha.conf"
+
 
 # Keep this at the bottom!
 set -g @plugin 'tmux-plugins/tpm'
@@ -72,6 +76,10 @@ set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux#v2.1.3'
+set -g @plugin 'erikw/tmux-dark-notify'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 run '~/.config/tmux/plugins/tpm/tpm'
+
+if-shell "test -e ~/.local/state/tmux/tmux-dark-notify-theme.conf" \
+  "source-file ~/.local/state/tmux/tmux-dark-notify-theme.conf"
