--- a/env/.config/ghostty/config
+++ b/env/.config/ghostty/config
@@ -1,2 +1,2 @@
-theme = light:catppuccin-latte,dark:catppuccin-mocha
+theme = light:Catppuccin Latte,dark:Catppuccin Mocha
 macos-titlebar-style = hidden
